# SpixelaTUIr

./: .gitignore  Cargo.toml  GEMINI.md  README.md
.cargo/: config.toml
.github/: copilot-instructions.md
.github/agents/: coder.agent.md  designer.agent.md  planner.agent.md
.github/workflows/: release.yml
benches/: edge_glow_bench.rs  glitch_bench.rs
issues/: improvements.md
samples/sample_presets/: beachpreset.json  cyberpreset.json  pc_on_fire_preset.json
specs/: animation_experience_specs.md  gpu_acceleration_specs.md  keyframe_animation_specs.md  layer_system_specs.md  masking_system_specs.md  procedural_textures_specs.md  specs.md  wasm_plugin_specs.md  webcam_input_specs.md
src/: app.rs  batch.rs  debug.rs  main.rs
src/app/: animation.rs  dialogs.rs  file_browser.rs  handlers.rs  mod.rs  pipeline_utils.rs  state.rs
src/config/: app_config.rs  favorites.rs  mod.rs  parser.rs  theme.rs
src/effects/: color.rs  composite.rs  crt.rs  glitch.rs  mod.rs
src/effects/wasm/: mod.rs  registry.rs  runtime.rs
src/engine/: anim_export.rs  export.rs  mod.rs  worker.rs
src/ui/: animation_panel.rs  canvas.rs  effects_panel.rs  file_browser.rs  layout.rs  mod.rs  widgets.rs
themes/: catppuccin_mocha.json  gruvbox_dark.json  spix_theme.json
