[package]
name = "spixelatuir"
version = "0.1.0"
edition = "2021"

[dependencies]
# TUI & Terminal
ratatui = "0.30"
crossterm = "0.29"
ratatui-image = { version = "10.0", features = ["crossterm"] }

# Image Processing & Math
image = "0.25"
imageproc = "0.26"

# Concurrency
rayon = "1.11"

# State & Configuration
serde = { version = "1.0", features = ["derive"] }
serde_yml = "0.0.12"

# Error Handling
anyhow = "1.0"
thiserror = "2.0"
