[package]
name = "spixelatuir"
version = "1.0.2"
edition = "2024"

[dependencies]
# TUI & Terminal
ratatui = "0.30"
crossterm = "0.29"
ratatui-image = { version = "10.0", default-features = false, features = ["crossterm", "image-defaults"] }

# Image Processing & Math
image = "0.25"
imageproc = "0.26"
glob = "0.3"


# State & Configuration
serde = { version = "1.0", features = ["derive"] }
serde_yml = "0.0.12"

# Error Handling
anyhow = "1.0"
thiserror = "2.0"
serde_json = "1.0.149"

# Logging
log = { version = "0.4", features = ["std"] }
dirs = "6.0.0"

[dev-dependencies]
tempfile = "3.27"
